# TinyANN_C

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: cnn.h
src/: cnn.cpp  main.cpp
